--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon ./server",
     "dev": "NODE_ENV=dev webpack --mode development --hot",
     "prod": "NODE_ENV=prod webpack --mode production"
   },
@@ -13,11 +14,18 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
     "css-loader": "^0.28.11",
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
     "mini-css-extract-plugin": "^0.4.0",
+    "nodemon": "^1.17.4",
     "style-loader": "^0.21.0",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3",
     "webpack-merge": "^4.1.2"
+  },
+  "nodemonConfig": {
+    "ignore": ["src/**"]
   }
 }
