--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "ignore-styles": "^5.0.1",
     "mini-css-extract-plugin": "^0.4.0",
     "nodemon": "^1.17.4",
     "react": "^16.3.2",
