--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./server",
-    "dev": "NODE_ENV=dev webpack --mode development --hot",
-    "prod": "NODE_ENV=prod webpack --mode production"
+    "start": "ENV=dev node ./server",
+    "dev": "ENV=dev webpack --mode development --hot",
+    "prod": "ENV=prod webpack --mode production"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +19,8 @@
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "extracted-loader": "^1.0.7",
+    "html-webpack-harddisk-plugin": "^0.2.0",
     "html-webpack-plugin": "^3.2.0",
     "ignore-styles": "^5.0.1",
     "mini-css-extract-plugin": "^0.4.0",
@@ -26,10 +28,13 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-hot-loader": "^4.1.3",
-    "style-loader": "^0.21.0",
+    "transform-runtime": "0.0.0",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3",
-    "webpack-merge": "^4.1.2"
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-hot-middleware": "^2.22.2",
+    "webpack-merge": "^4.1.2",
+    "webpack-node-externals": "^1.7.2"
   },
   "nodemonConfig": {
     "ignore": [
