rename package json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "google-maps",
+  "name": "webpack-react-serverside-rendering",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
