--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,10 @@
     "react"
   ],
   "plugins": [
+    "transform-es2015-destructuring",
+    "transform-object-rest-spread",
+    "transform-decorators-legacy",
+    "transform-class-properties",
     "react-hot-loader/babel"
   ]
 }
