--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "extracted-loader": "^1.0.7",
+    "file-loader": "^1.1.11",
+    "font-awesome": "^4.7.0",
     "google-map-react": "^1.0.3",
     "html-webpack-harddisk-plugin": "^0.2.0",
     "html-webpack-plugin": "^3.2.0",
@@ -33,6 +35,8 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-hot-loader": "^4.1.3",
+    "react-transition-group": "^2.3.1",
+    "reset-css": "^3.0.0",
     "transform-runtime": "0.0.0",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3",
