--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-hot-loader": "^4.1.3",
     "react-transition-group": "^2.3.1",
     "reset-css": "^3.0.0",
+    "shortid": "^2.2.8",
     "transform-runtime": "0.0.0",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3",
