--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-hot-loader": "^4.1.3",
+    "react-redux": "^5.0.7",
     "react-transition-group": "^2.3.1",
+    "redux": "^4.0.0",
     "reset-css": "^3.0.0",
     "shortid": "^2.2.8",
     "transform-runtime": "0.0.0",
