--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jest-cli": "^23.1.0",
     "jest-enzyme": "^6.0.1",
     "mini-css-extract-plugin": "^0.4.0",
+    "node-sass": "^4.9.0",
     "nodemon": "^1.17.4",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
@@ -47,6 +48,7 @@
     "react-redux": "^5.0.7",
     "react-transition-group": "^2.3.1",
     "redux": "^4.0.0",
+    "sass-loader": "^7.0.3",
     "shortid": "^2.2.8",
     "transform-runtime": "0.0.0",
     "webpack": "^4.8.3",
