--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
     "bootstrap-4-grid": "^2.4.0",
+    "classnames": "^2.2.6",
     "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
@@ -49,6 +50,7 @@
     "react-transition-group": "^2.3.1",
     "redux": "^4.0.0",
     "sass-loader": "^7.0.3",
+    "serialize-javascript": "^1.5.0",
     "shortid": "^2.2.8",
     "transform-runtime": "0.0.0",
     "webpack": "^4.8.3",
